my-apps/media/booklore/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: booklore
  namespace: booklore
spec:
  type: ClusterIP
  selector:
    app: booklore
  ports:
    - name: http
      port: 6060
      targetPort: 6060
      protocol: TCP
